<resources>
    <string name="app_name">News Feed</string>
    <string name="no_news">There are no articles available right now but please come back again later.</string>
    <string name="no_internet_connection">No internet connection.</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Feed Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="settings_search_label">Search</string>
    <string name="settings_search_key" translatable="false">q</string>
    <string name="settings_search_default" translatable="false">Business</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">orderBy</string>

    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>
    <string name="settings_order_by_oldest_label">Oldest Article</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <string name="settings_order_by_newest_label">Newest Article</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <string name="settings_page_size_label">Articles Per Page</string>
    <string name="settings_page_size_key" translatable="false">pageSize</string>
    <string name="settings_page_size_default">10</string>

    <string name="apiKey">api-key</string>
    <string name="orderBy">order-by</string>
    <string name="pageSize">page-size</string>
    <string name="question">q</string>

</resources>
